packages/fuels-macros/tests/ui/abigen/invalid_program_type.stderr
error: Unsupported program type. Expected: 'Contract', 'Script' or 'Predicate'
 --> tests/ui/abigen/invalid_program_type.rs:3:9
  |
3 | abigen!(SomeInvalidProgramType(
  |         ^^^^^^^^^^^^^^^^^^^^^^
